--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DrawingApp</string>
+    <string name="button_for_displaying_brush_size_dialog">button for displaying brush size dialog</string>
 </resources>
