added loading background image from gallery

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">DrawingApp</string>
     <string name="button_for_displaying_brush_size_dialog">button for displaying brush size dialog</string>
     <string name="button_for_opening_gallery_image_picker">button for opening gallery image picker</string>
+    <string name="please_wait">Please wait...</string>
+    <string name="undo_button">undo button</string>
 </resources>
